--- a/r_programming_notes.Rmd
+++ b/r_programming_notes.Rmd
@@ -9,15 +9,22 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## R programming notes
+This file contains notes concerning R programming. Mainly messing around with command and data.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```##Code
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+##assign a vector, in this case a sequence of integers
+x <- 1:20
+print(x)
 
-```{r cars}
-summary(cars)
+##casting a number as integer
+y <-1L
+print(y)
 
+##creating a numeric vector
+z <- vector("numeric", length =10)
+print(z)
 
 
 
